--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelancer Web</title>
 </head>
 <body>
+    <h1>Yasin Ben Omar Freelancer</h1>
+
+    <h2>Diseño y Desarrollo WEb Frelancer</h2>
+
+    <p>Blanes,Giorna</p>
+
+    <h2> Mis Servicios</h2>
+
+    <h3>Desiño Web</h3>
+    <p>  amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio? Architecto.</p>
+
+
+    <h3>Aplicaciones Web</h3>
+    <p>  amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio? Architecto.</p>
+
+
+    <h3>E-Commerce</h3>
+    <p>  amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio? Architecto.</p>
     
 </body>
 </html>
