--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelancer Web</title>
+    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,12 +18,16 @@
          <h1 class="titulo">Yasin Ben <span>Freelancer</span></h1>
     </header>
 
-    <nav>
+    <div class="nav-bg">
+         <nav class="principal-navigacion contenedor">
         <a href="#">Inicio</a>
         <a href="#">Sobre Mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contacto</a>
     </nav>
+    </div>
+
+   
 
     <section>
         <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
