--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
 
     <section class="hero">
         <div class="contenido-hero">
-            <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
+            <h2>Diseño y Desarrollo Web Freelancer</h2>
 
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-code" width="68" height="68" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c9de00" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M11 18l-2 -1l-6 3v-13l6 -3l6 3l6 -3v9" />
-                <path d="M9 4v13" />
-                <path d="M15 7v6.5" />
-                <path d="M20 21l2 -2l-2 -2" />
-                <path d="M17 17l-2 2l2 2" />
-            </svg>
-            <p>Blanes,Girona</p>
+            <div class="ubicacion">
 
-            <a href="#">Contactar</a>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-code" width="68" height="68" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c9de00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                     <path d="M11 18l-2 -1l-6 3v-13l6 -3l6 3l6 -3v9" />
+                     <path d="M9 4v13" />
+                     <path d="M15 7v6.5" />
+                     <path d="M20 21l2 -2l-2 -2" />
+                     <path d="M17 17l-2 2l2 2" />
+                </svg>
+                <p>Blanes,Girona</p>
+            </div>
+
+
+            <a class="boton" href="#">Contactar</a>
         </div>
     </section>
    
