--- a/index.html
+++ b/index.html
@@ -55,116 +55,131 @@
         </div>
     </section>
 
-
     <main class="contenedor sombra">
         <h2> Mis Servicios</h2>
 
         <div class="servicios">
-            <section>
+            <section class="servicio">
                 <h3>Diseño Web</h3>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-browser-x" width="40"
-                    height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#999999" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M4 4m0 1a1 1 0 0 1 1 -1h14a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-14a1 1 0 0 1 -1 -1z" />
-                    <path d="M4 8h16" />
-                    <path d="M8 4v4" />
-                    <path d="M10 16l4 -4" />
-                    <path d="M14 16l-4 -4" />
-                </svg>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-browser-x" width="52"
+                        height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M4 4m0 1a1 1 0 0 1 1 -1h14a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-14a1 1 0 0 1 -1 -1z" />
+                        <path d="M4 8h16" />
+                        <path d="M8 4v4" />
+                        <path d="M10 16l4 -4" />
+                        <path d="M14 16l-4 -4" />
+                    </svg>
+                </div>
+
 
                 <p> amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio?
                     Architecto.</p>
             </section>
 
-            <section>
+            <section class="servicio">
                 <h3>Aplicaciones Web</h3>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="40"
-                    height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#999999" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path
-                        d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
-                    <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
-                </svg>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android"
+                        width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M4 10l0 6" />
+                        <path d="M20 10l0 6" />
+                        <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
+                        <path d="M8 3l1 2" />
+                        <path d="M16 3l-1 2" />
+                        <path d="M9 18l0 3" />
+                        <path d="M15 18l0 3" />
+                    </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android" width="40"
-                    height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#999999" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M4 10l0 6" />
-                    <path d="M20 10l0 6" />
-                    <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
-                    <path d="M8 3l1 2" />
-                    <path d="M16 3l-1 2" />
-                    <path d="M9 18l0 3" />
-                    <path d="M15 18l0 3" />
-                </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="52"
+                        height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
+                        <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
+                    </svg>
+
+
+                </div>
+
+
 
                 <p> amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio?
                     Architecto.</p>
             </section>
 
-            <section>
+            <section class="servicio">
                 <h3>E-Commerce</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="52"
+                        height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
+                        <path d="M3 10l18 0" />
+                        <path d="M7 15l.01 0" />
+                        <path d="M11 15l2 0" />
+                    </svg>
+                </div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="40"
-                    height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#999999" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
-                    <path d="M3 10l18 0" />
-                    <path d="M7 15l.01 0" />
-                    <path d="M11 15l2 0" />
-                </svg>
+
 
                 <p> amet veritatis quo earum adipisci blanditiis possimus dicta, voluptatum eos in incidunt odio?
                     Architecto.</p>
-            </section>        
+            </section>
         </div>
+
+
+        <section>
+            <h2>Contacto</h2>
+
+            <form class="formulario">
+                <fieldset>
+                    <legend>contactame</legend>
+
+                    <div class="contenedor-campos">
+                        <div class="campo">
+                            <label>Nombre</label>
+                            <input class="input-text" type="text" placeholder="Tu Nombre">
+                        </div>
+
+                        <div class="campo">
+                            <label>Telefono</label>
+                            <input class="input-text" type="tel" placeholder="Tu Telefono">
+                        </div>
+
+                        <div class="campo">
+                            <label>Correo</label>
+                            <input class="input-text" type="email" placeholder="Tu email">
+                        </div>
+
+                        <div class="campo">
+                            <label class="input-text">Mensaje</label>
+                            <textarea></textarea>
+
+                        </div>
+                    </div>
+
+
+                    <div class="alinear-derecha flex">
+
+                        <input class="boton w-sm-100" type="submit" value="Enviar">
+                    </div>
+
+                </fieldset>
+            </form>
+        </section>
     </main>
 
-
-    <section>
-        <h2>Contacto</h2>
-
-        <form>
-            <fieldset>
-                <legend>contactame</legend>
-                <div>
-                    <label>Nombre</label>
-                    <input type="text" placeholder="Tu Nombre">
-                </div>
-
-                <div>
-                    <label>Telefono</label>
-                    <input type="tel" placeholder="Tu Telefono">
-                </div>
-
-                <div>
-                    <label>Correo</label>
-                    <input type="email" placeholder="Tu email">
-                </div>
-
-                <div>
-                    <label>Mensaje</label>
-                    <textarea></textarea>
-
-                </div>
-
-                <div>
-
-                    <input type="submit" value="Enviar">
-                </div>
-
-            </fieldset>
-        </form>
-    </section>
-
-    <footer>
-        <p>Todos los derechos reservados. Yasin Ben Omar Freelancer</p>
+    <footer class="footer">
+        <p>Todos los derechos reservados. 2022Yasin Ben Omar Freelancer</p>
     </footer>
 
 
