--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
                         </div>
 
                         <div class="campo">
-                            <label class="input-text">Mensaje</label>
-                            <textarea></textarea>
-
+                            <label>Mensaje</label>
+                            <textarea class="input-text"></textarea>
                         </div>
                     </div>
 
