--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
 
 
-                    <div class="alinear-derecha flex">
+                    <div class="alinear-derecha">
 
                         <input class="boton w-sm-100" type="submit" value="Enviar">
                     </div>
