Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="es" xml:lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="p:domain_verify" content="94b447e34f0b7446d685af4b56579da4"/>
-    <title>Freelancer Web</title>
+    <title>Freelancer Web | páginas web Blanes|programador Blanes |Girona programació</title>
+
+<meta name="description" content="programador freelance, páginas web a medida para todos los sectores, consultanos y estaremos encantados de ayudarte y guiarte para tener tu página online y tener más clientes, también te asesoramos en tema redes sociales y mejorar el posicionamiento de tu página en tu zona . haz tu consulta y estaremos encantados de syudarte!">
+
+<meta name="keywords" content="pàginas weba medida, redes sociales, posicionamiento web, redes sociales para negocios, Blanes, Lloret de Mar, Girona, malgrat de mar, Maresme, la selva, Barcelona">
+
+<meta name="author" content="YasDev2022">
+<meta http-equiv="Content-Language" content="es">
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
